# epymetheus

./: .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  test.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  publish.yml  python-package.yml
epymetheus/: __init__.py  history.py  strategy.py  trade.py  universe.py  utils.py  wealth.py
epymetheus/benchmarks/: __init__.py  benchmarks.py  buy_and_hold.py  random.py
epymetheus/datasets/: randomwalk.py
epymetheus/metrics/: __init__.py  metrics.py  name.py
epymetheus/stochastic/: __init__.py  brownian.py
epymetheus/strategy/: __init__.py  base.py  container.py
epymetheus/ts/: __init__.py  ts.py
examples/examples/: hypara.py
examples/readme/: readme.py
tests/: test_strategy.py  test_trade.py
tests/benchmarks/: test_benchmarks.py
tests/datasets/: test_usstocks.py
tests/history/: test_attr.py  test_exceptions.py  test_history.py  test_init.py  test_methods.py
tests/integration/: test_linearity.py  test_one.py
tests/metrics/: test_metrics.py
tests/strategy/: test_abc.py  test_base.py  test_container.py  test_method.py  test_property.py
tests/trade/: test_methods.py  test_operation.py  test_property.py
tests/ts/: test_ts.py
tests/universe/: test_exceptions.py
tests/wealth/: test_init.py  test_pandas.py
