[tool.poetry]
name = "epymetheus"
version = "0.10.3"
description = "Multi-asset Backtesting Framework"
authors = ["Shota Imaki <shota.imaki@icloud.com>"]
license = "BSD-3-Clause"
homepage = "https://github.com/simaki/epymetheus"
repository = "https://github.com/simaki/epymetheus"

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.0.0"
numpy = "^1.18.0"
pandas-datareader = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
matplotlib = "^3.1.2"
seaborn = "^0.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
force_single_line = true
